--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,9 @@
   *::after {
     box-sizing: border-box;
   }
+
   :root {
-    font-family: "Helvetica", sans-serif;
+    --page-color: #3f8363;
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
@@ -72,6 +73,11 @@
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
+  }
+
+  /* Remove default scrollbar */
+  *::-webkit-scrollbar {
+    display: none;
   }
 }
 
