Update mainMenu in menu.ts to include protected routes

--- a/src/index.css
+++ b/src/index.css
@@ -104,6 +104,9 @@
   .bg-main {
     @apply bg-[#5A471D];
   }
+  .bg-minor {
+    @apply bg-[#747544];
+  }
   .bg-book {
     @apply bg-[#d8d8d84d];
   }
